# InvOpt

./: .gitignore  LICENSE.txt  README.md  TODO.txt  pyproject.toml
examples/: MILP.py  MIQP.py  README.MD  binary_LP_consistent_data.py  binary_LP_inconsistent_data.py  first_order_methods.py  simultanious_regression_classification.py  utils_examples.py
examples/FOM/: README.MD  first_order_methods.py  vrptw.py  vrptw_utils.py
examples/FOM/vrptw_data/: dataset_test_200_10000_v0.p  dataset_test_200_10000_v1.p  dataset_test_200_10000_v2.p  dataset_test_200_10000_v3.p  dataset_test_200_10000_v4.p  dataset_train_200_10000_v0.p  dataset_train_200_10000_v1.p  dataset_train_200_10000_v2.p  dataset_train_200_10000_v3.p  dataset_train_200_10000_v4.p
examples/MIP_linear/: MILP.py  README.MD
examples/MIP_quadratic/: MIQP.py  README.MD  simultanious_regression_classification.py
examples/continuous_linear/: LP.py  README.MD
examples/continuous_quadratic/: QP.py  README.MD
examples/discrete/: README.MD  binary_LP_inconsistent_data.py
examples/discrete_consistent/: README.MD  binary_LP_consistent_data.py
examples/discrete_model/: README.MD  binary_LP_inconsistent_data.py
examples/discrete_model_consistent/: README.MD  binary_LP_consistent_data.py
examples/mixed_integer_linear/: MILP.py  README.MD
examples/mixed_integer_quadratic/: MIQP.py  README.MD  simultaneous_regression_classification.py  simultanious_regression_classification.py
src/invopt/: __init__.py  main.py
tests/: test_examples.py
(+1 files in other folders)
